--- a/reviewSite/review_app/templates/base.html
+++ b/reviewSite/review_app/templates/base.html
@@ -42,11 +42,9 @@
                 <a href="{% url 'album_list'  %}" class="list-group-item {% if request.path == '/' %}active{% endif %}">
                   <i class="bi bi-house-door me-2"></i> <span>Home</span>
                 </a>
-                {% if user.is_authenticated %}
-                <a href="{% url 'my_reviews' user_pk=user.id %}" class="list-group-item {% if '/my_reviews' in request.path %}active{% endif %}">
+                <a href="{% url 'my_reviews' %}" class="list-group-item {% if request.path == '/my_reviews/' %}active{% endif %}">
                   <i class="bi bi-chat-right-heart me-2"></i> <span>My Reviews</span>
                 </a>
-                {% endif %}
                 <a href="{% url 'dashboard' %}" class="list-group-item {% if request.path == '/dashboard/' %}active{% endif %}">
                   <i class="bi bi-bar-chart me-2"></i> <span>Dashboard</span>
                 </a>
