--- a/reviewSite/static/css/styles.css
+++ b/reviewSite/static/css/styles.css
@@ -11,7 +11,7 @@
 }
 
 /* Apply the primary font to headers */
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5 {
     font-family: var(--primary-font);
 }
 
